Gradient weight paint crash when changing ti radial #64230

Closed
opened 2019-05-07 05:11:23 +02:00 by Jay Edwards · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 00:16, hash: bfef3bce1a
Worked: (optional)

Short description of error
after using the gradient paint tool and switching the weight distribution to radial from the f8 properties, blender will immediately crash

Exact steps for others to reproduce the error

  • open blender
  • go to weight pain mode
  • select the gradient paint tool
  • paint an object, any object
  • right after which, bring up your properties menu with f8 and select radial, right after which blender should crash
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.54 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 00:16, hash: `bfef3bce1a` Worked: (optional) **Short description of error** after using the gradient paint tool and switching the weight distribution to radial from the f8 properties, blender will immediately crash **Exact steps for others to reproduce the error** - open blender - go to weight pain mode - select the gradient paint tool - paint an object, any object - right after which, bring up your properties menu with f8 and select radial, right after which blender should crash
Author

Added subscriber: @Jaye.Antoni_Whyldz

Added subscriber: @Jaye.Antoni_Whyldz

This issue was referenced by 73e7c9d589

This issue was referenced by 73e7c9d58961ca54b616b7dcab1f01f7dbf11274

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64230
No description provided.