Fix T64230: Crash on weight paint gradient redo